syntax = "proto3";
package storage;

message GetChunkRequest {
    string handle = 1;
    int64 start = 2;
    int64 end = 3;
}

message GetChunkReponse {
    bytes chunk = 1;
    string err = 2;
}

message StoreChunkRequest {
    bytes body = 1;
}

message StoreChunkResponse {
    string err = 1;
}

service ChunkService {
    rpc StoreChunk(StoreChunkRequest) returns StoreChunkResponse {}
    rpc GetChunk(GetChunkRequest) returns GetChunkReponse {}
}